--- a/public/styles/aboutt.css
+++ b/public/styles/aboutt.css
@@ -265,10 +265,10 @@ h1{
   margin: 0;
 }
 label::before{
-  content: "";
+  /* content: "";
   display: inline-block;
   border: 5px solid transparent;
-  border-left: 5px solid white;
+  border-left: 5px solid white; */
 }
 label{
   cursor: pointer;
@@ -288,16 +288,16 @@ div.p{
 }
 
 div.p p {
-  padding: 21px;
+  /* padding: 21px; */
   padding-top: 0px;
   padding-bottom: 0px;
 }
 
 input:checked ~ h1 label::before{
-  border-left: 5px solid transparent;
+  /* border-left: 5px solid transparent;
   border-top: 5px solid white;
   margin-top: 12px;
-  margin-right: 10px;
+  margin-right: 10px; */
 }
 input:checked ~ h1 ~ div.p{
   /* max-height:100px; */
@@ -305,6 +305,14 @@ input:checked ~ h1 ~ div.p{
 }
 
 
+.mobile-container{
+  overflow-x: hidden;
+}
+
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
 
 /* ------------- */
 
