--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -136,7 +136,7 @@ body {
   /* color: hsl(0, 0%, 6%); */
   color: #000dff;
   overflow-y: hidden;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   cursor: url("cur.png"), url("cur.cur"), default;
   cursor: url(cur.png), auto;
   /* font-family: 'IBMPlexMono';  */
@@ -1282,7 +1282,7 @@ z-index: 10000;
 
 .centermobile{
   position: relative;
-  display: flex;
+  /* display: flex; */
   /* left: 4%; */
   /* top: 51%; */
   /* transform: translate(-50%, -50%); */
@@ -1329,9 +1329,8 @@ z-index: 10000;
 
 .mainmobile{
   height: 100vh;
-
+  overflow-x: scroll;
   min-height: 100vh;
-  overscroll-behavior: auto;
   /* display: flex; */
   /* background: radial-gradient(circle at center , #ffffffab 0,#6a6afc76 50%,#000070 60%, #12129176 70%, #00002C 100%); */
   /* background: radial-gradient(circle at center , #53535396 0,#271d7c76 20%,#00002c, #050567 100%); */
@@ -1873,19 +1872,22 @@ width: 100%;
 }
 
 
-
+ /* for FOM not scroll use  position: absolute; on line 1738 and  bottom: -135vw; &  position: relative; on line 1876 and  */
 .bottomcont{
-  position: absolute;
-  bottom: 2vw;
-  z-index: 1;
-  /* display: flex; */
-  mix-blend-mode: difference;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  align-content: center;
-  flex-wrap: nowrap;
-  /* padding-bottom: 40vh; */
+    /* position: absolute; */
+    /* bottom: 2vw; */
+    /* position: fixed; */
+    bottom: 2vw;
+    z-index: 1;
+    /* display: flex; */
+    mix-blend-mode: difference;
+    /* flex-direction: column; */
+    /* justify-content: center; */
+    /* align-items: center; */
+    /* align-content: center; */
+    /* flex-wrap: nowrap; */ 
+    /* padding-bottom: 40vh; */
+    padding-bottom: 10vh;
 }
 
 
@@ -1909,13 +1911,22 @@ width: 100%;
 
 /* ---------- accordion style start --------------------------------------- */
 
+.ac-input{
+ 
+}
+
+.row{
+  overflow-y: scroll !important;
+  height: 100vh;
+}
 
 .accordion-bral {
   min-height: 0;
   min-width: 220px;
   width: 100%;
   height: 100%;
-  position: relative;
+  /* position: fixed; */
+  top: 68vh;
   /* bottom: -14vh; */
   /* background-color: #FFF; */
   margin: 0px!important;
@@ -2001,7 +2012,7 @@ width: 100%;
   color: rgb(255 255 159); */
   padding-top: 0vh;
   /* mix-blend-mode: difference; */
-  background: rgb(14 0 168);
+  /* background: rgb(14 0 168); */
   z-index: 100000;
   mix-blend-mode: unset;
   /* background: rgb(205 205 205 / 65%); */
@@ -2019,7 +2030,7 @@ width: 100%;
   height: auto;
   position: relative;
   text-align: left;
-  position: absolute;
+  /* position: absolute; */
   /* word-spacing: 0.5rem; */
   /* margin: var(--s-10) auto; */
   justify-content: center;
@@ -2203,17 +2214,18 @@ table.ac-table th{
       max-width: 535px !important;
       margin: auto;
       line-height: 1.4;
+      /* position: fixed; */
       /* display: none; */
   }
 
 
   .bottomcont{
     /* display: none; */
-    position: relative;
+    /* position: relative; */
   }
 
   .centermobile{
-    display: block;
+    /* display: block; */
   }
   }
 
@@ -2298,11 +2310,11 @@ table.ac-table th{
 
   .bottomcont{
     /* display: none; */
-    position: relative;
+    /* position: relative; */
   }
 
   .centermobile{
-    display: block;
+    /* display: block; */
   }
 
   }
