--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -134,7 +134,7 @@ body {
   margin: 0;
   min-height: 100vh;
   /* color: hsl(0, 0%, 6%); */
-  color: #000dff;
+  /* color: #000dff; */
   overflow-y: hidden !important;
   /* overflow-x: hidden; */
   cursor: url("cur.png"), url("cur.cur"), default;
@@ -329,7 +329,7 @@ option {
   text-transform: uppercase;
   display: -webkit-flex;
     -webkit-flex-wrap: wrap;
-    /* mix-blend-mode: difference; */
+    mix-blend-mode: difference;
     font-size: var(  --exx-small-font);
     /* color: #b3b3b3; */
     flex-wrap: wrap;
@@ -635,7 +635,7 @@ option {
   /* background-color:rgb(14, 0, 168); */
   color:rgb(255, 255, 255);
   z-index: 100;
-  mix-blend-mode: difference;
+  /* mix-blend-mode: difference; */
   display: flex;
     justify-content: center;
     align-items: center;
@@ -653,7 +653,7 @@ option {
   /* background-color:rgb(14, 0, 168); */
   color:rgb(255, 255, 255);
   z-index: 100;
-  mix-blend-mode: difference;
+  /* mix-blend-mode: difference; */
   display: flex;
     justify-content: center;
     align-items: center;
@@ -671,7 +671,7 @@ option {
   /* background-color:rgb(14, 0, 168); */
   color:rgb(255, 255, 255);
   z-index: 100;
-  mix-blend-mode: difference;
+  /* mix-blend-mode: difference; */
   display: flex;
     justify-content: center;
     align-items: center;
@@ -689,7 +689,7 @@ option {
   /* background-color:rgb(14, 0, 168); */
   color:rgb(255, 255, 255);
   z-index: 100;
-  mix-blend-mode: difference;
+  /* mix-blend-mode: difference; */
   display: flex;
     justify-content: center;
     align-items: center;
@@ -716,7 +716,7 @@ option {
 
 .linkTop:hover{
   /* color:#cfff00; */
-  mix-blend-mode: difference;
+  /* mix-blend-mode: difference; */
   transition: opacity 0.35s, padding-top 0.75s;
   /* padding-top: 1.5vw; */
 }
@@ -754,7 +754,7 @@ option {
   line-height: var( --line-height);
   font-size: var( --large-font);
   font-weight: 300;
-  mix-blend-mode: difference;
+  /* mix-blend-mode: difference; */
   text-transform: uppercase;
   font-family: 'PicNic';
   font-family: 'PicNicc';
@@ -776,7 +776,7 @@ option {
    line-height: var( --line-height);
    font-size: var( --large-font);
    font-weight: 300;
-   mix-blend-mode: difference;
+   /* mix-blend-mode: difference; */
    text-transform: uppercase;
    font-family: 'PicNicc';
    padding: var(--s-40);
@@ -829,7 +829,7 @@ option {
 /* --------------------- decorative */
 .cordiantesContainer{
   color:#000dff90;
-  mix-blend-mode: difference;
+  /* mix-blend-mode: difference; */
   display: flex;
   justify-content: space-between;
   width:100vw; 
@@ -857,7 +857,7 @@ font-size: .850vw;
   align-content: center;
   justify-content: center;
   z-index: 1000;
-  mix-blend-mode: difference;
+  /* mix-blend-mode: difference; */
 }
 
 
@@ -870,7 +870,7 @@ font-size: .850vw;
   align-content: center;
   justify-content: center;
   z-index: 1000;
-  /* mix-blend-mode: difference; */
+  mix-blend-mode: difference;
 }
 
 
@@ -890,7 +890,7 @@ font-size: .850vw;
   /*     color: rgb(255 255 212 / 75%); */
   /* pointer-events: none; */
   z-index: 1000;
-  mix-blend-mode: difference;
+  /* mix-blend-mode: difference; */
 }
 
 
@@ -1243,7 +1243,7 @@ z-index: 10000;
   font-size: 1.2rem;
   /* font-weight: bold; */
       color: rgb(255 255 212 / 75%);
-  mix-blend-mode: difference;
+  /* mix-blend-mode: difference; */
   text-transform: none;
   /* position: fixed; */
   padding-bottom: 2vh;
@@ -1330,7 +1330,7 @@ z-index: 10000;
 
 .mainmobile{
   height: 100vh;
-  overflow-x: scroll;
+  /* overflow-x: scroll; */
   min-height: 100vh;
   /* display: flex; */
   /* background: radial-gradient(circle at center , #ffffffab 0,#6a6afc76 50%,#000070 60%, #12129176 70%, #00002C 100%); */
@@ -1488,7 +1488,7 @@ z-index: 10000;
   font-size: 2rem;
   /* font-family: 'Helveticalight'; */
   font-family: 'PicNic';
-  mix-blend-mode: difference;
+  /* mix-blend-mode: difference; */
   z-index: 10000;
   align-items: center;
 }
@@ -1595,7 +1595,7 @@ background-color: transparent;
   text-align: center;
   justify-content: center;
   /* border: 1px solid #e0e0e0; */
-  /* mix-blend-mode: difference; */
+  mix-blend-mode: difference;
   /* color:#e0e0e0; */
   border-radius: 50%;
   font-size: 2vw;
@@ -1628,7 +1628,7 @@ background-color: transparent;
   /* border: 1px solid #030bff;
   color:#0400ff; */
   color: #edff85d4;
-  mix-blend-mode: difference;
+  /* mix-blend-mode: difference; */
   /* border-radius: 50%; */
   top: 0;
 font-size: 1.2vw;
@@ -1760,7 +1760,7 @@ left: 7vw;
   align-content: center;
   justify-content: center;
   z-index: 1000;
-  mix-blend-mode: difference;
+  /* mix-blend-mode: difference; */
   /* margin-top: auto; */
   /* line-height: var( --line-height); */
   /* font-size: var( --large-font); */
@@ -1881,7 +1881,7 @@ width: 100%;
     bottom: 2vw;
     z-index: 100000;
     /* display: flex; */
-    mix-blend-mode: difference;
+    /* mix-blend-mode: difference; */
     /* flex-direction: column; */
     /* justify-content: center; */
     /* align-items: center; */
@@ -1972,7 +1972,8 @@ width: 100%;
   /* background: #BBB; */
 }
 .accordion-bral input + .ac-label  {
-  /* color: rgb(255 255 159); */mix-blend-mode: difference;
+  /* color: rgb(255 255 159); */
+  /* mix-blend-mode: difference; */
   
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
@@ -1983,7 +1984,7 @@ width: 100%;
 .accordion-bral input:checked + .ac-label,
 .accordion-bral input:checked + .ac-label:active {
   /* color: rgb(255 255 159); */
-  /* color: rgb(255 255 159); */mix-blend-mode: difference;
+  /* color: rgb(255 255 159); */
   /* mix-blend-mode: difference; */
 }
 .accordion-bral input.ac-input {
@@ -2014,7 +2015,7 @@ width: 100%;
   /*     color: rgb(255 255 212 / 75%);
   color: rgb(255 255 159); */
   padding-top: 0vh;
-  /* mix-blend-mode: difference; */
+  mix-blend-mode: difference;
   /* background: rgb(14 0 168); */
   z-index: 100000;
   mix-blend-mode: unset;
@@ -2045,7 +2046,7 @@ width: 100%;
   text-transform: none;
   width: 99vw;
   /* padding-top: 5vw; */
-  /* mix-blend-mode: difference; */
+  mix-blend-mode: difference;
   /* background: rgb(14 0 168); */
   z-index: 100000;
   mix-blend-mode: unset;
@@ -2171,7 +2172,7 @@ table.ac-table th{
       align-content: center;
       justify-content: flex-start;
           color: rgb(255 255 212 / 75%);
-      mix-blend-mode: difference; */
+      /* mix-blend-mode: difference; */ */
     }
     
     .topnav {
@@ -2200,7 +2201,7 @@ table.ac-table th{
       text-decoration: none;
       /* font-size: 17px; */
       display: block;
-      mix-blend-mode: difference;
+      /* mix-blend-mode: difference; */
       font-size: 4vw;
     }
     
@@ -2218,6 +2219,7 @@ table.ac-table th{
       max-width: 535px !important;
       margin: auto;
       line-height: 1.4;
+      mix-blend-mode: difference;
       /* position: fixed; */
       /* display: none; */
   }
@@ -2261,7 +2263,7 @@ table.ac-table th{
       align-content: center;
       justify-content: flex-start;
           color: rgb(255 255 212 / 75%);
-      mix-blend-mode: difference; */
+      /* mix-blend-mode: difference; */ */
     }
     
     .topnav {
@@ -2290,7 +2292,7 @@ table.ac-table th{
       text-decoration: none;
       /* font-size: 17px; */
       display: block;
-      mix-blend-mode: difference;
+      /* mix-blend-mode: difference; */
       font-size: 4vw;
       /* position: absolute; */
     }
