--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -348,6 +348,7 @@ option {
 
 .containermobile{
   display: none;
+  color: rgb(255 255 159);
   overflow: scroll !important;
 }
 
@@ -428,11 +429,13 @@ option {
 .subMenu{
   margin-left: auto;
   margin-right:  auto;
-  /* mix-blend-mode:difference; */
+  color: rgb(255 255 159);
+  mix-blend-mode: difference;
   display: table-cell;
   width: 80vw;
   /* margin: var(--s-10) auto; */
   /* z-index: 10; */
+  z-index: 10;
   display: flex;
   /* padding: var(--s-20); */
   padding-top: 0px;
@@ -491,7 +494,8 @@ option {
     font-size: 1vw;
     font-size: 14px;
         color: rgb(255 255 212 / 75%);
-    mix-blend-mode:difference;
+    /* mix-blend-mode:difference; */
+    color: rgb(236 236 236);
     text-transform: none;
     width: 26vw;
   
@@ -531,7 +535,8 @@ option {
     justify-content: center;
     /* width: 80vw; */
         color: rgb(255 255 212 / 75%);
-    mix-blend-mode:difference;
+     /* mix-blend-mode:difference; */
+     color: rgb(236 236 236);
 }
 
 
@@ -754,7 +759,7 @@ option {
   line-height: var( --line-height);
   font-size: var( --large-font);
   font-weight: 300;
-  /* mix-blend-mode: difference; */
+  mix-blend-mode: difference;
   text-transform: uppercase;
   font-family: 'PicNic';
   font-family: 'PicNicc';
@@ -763,7 +768,7 @@ option {
   padding-top: 0;
   pointer-events: none;
   transition:none;
-  z-index: 100 !important;
+  color: #000dff8a;
   position: absolute;
   top: 40%;
   left: 50%;
@@ -1176,6 +1181,7 @@ z-index: 10000;
    background: radial-gradient(circle at center , #ffffffab 0,#6a6afc76 50%,#000070 60%, #12129176 70%, #00002C 100%);
    padding: 0rem;
    overflow: scroll !important;
+   color: rgb(255 255 159);
 
 }
 
@@ -1771,6 +1777,7 @@ left: 7vw;
   padding: 2vw;
   padding-top: 11vh;
   font-size: 20vh;
+  mix-blend-mode: difference;
   /* padding-bottom: 17vh; */
   /* padding-top: 0; */
   /* pointer-events: none; */
@@ -2311,6 +2318,7 @@ table.ac-table th{
       max-width: 535px !important;
       margin: auto;
       line-height: 1.3;
+      mix-blend-mode: difference;
       /* display: none; */
   }
 
