--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -435,6 +435,8 @@ option {
   width: 80vw;
   /* margin: var(--s-10) auto; */
   /* z-index: 10; */
+  padding: var(--s-20);
+  padding-top: 4px;
   z-index: 10;
   display: flex;
   /* padding: var(--s-20); */
