--- a/public/styles/aboutt.css
+++ b/public/styles/aboutt.css
@@ -2563,7 +2563,7 @@ display: flex;
   z-index: 20;
   display: block;
   font-size: 12px;
-  font-weight: 100;
+  /* font-weight: 100; */
   /* height: 30px; */
   cursor: pointer;
   color: rgb(10, 199, 39);
