--- a/public/styles/aboutt.css
+++ b/public/styles/aboutt.css
@@ -53,7 +53,21 @@ div {
     scrollbar-width: none;  /* Firefox */
   }
   
-  
+  html {
+    font-size: 100%;
+    box-sizing: border-box;
+    background: #00002C;
+    
+}
+
+* , * ::before, * ::after {
+box-sizing: inherit;
+
+}
+
+body{
+  background: #00002C;
+}
   
   
     @font-face {
