--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -117,6 +117,7 @@ font-family: 'PicNicc';
 html {
     font-size: 100%;
     box-sizing: border-box;
+    background: #00002C;
     
 }
 
@@ -125,6 +126,9 @@ box-sizing: inherit;
 
 }
 
+body{
+  background: #00002C;
+}
 
 html,
 body {
