--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -118,6 +118,7 @@ html {
     font-size: 100%;
     box-sizing: border-box;
     background: #00002C;
+    overflow-y: hidden !important;
     
 }
 
@@ -128,7 +129,7 @@ box-sizing: inherit;
 
 body{
   background: #00002C;
-  overflow-y: hidden;
+  overflow-y: hidden !important;
 }
 
 html,
