--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -127,6 +127,15 @@ box-sizing: inherit;
 
 }
 
+html:before {
+  content: '';
+  position: fixed;
+  width: 100%;
+  height: 999px;
+  top: -999px;
+  background-color: tomato;
+}
+
 body{
   background: #00002C;
   overflow-y: hidden !important;
