--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -128,17 +128,13 @@ box-sizing: inherit;
 }
 
 html:before {
-  content: '';
-  position: fixed;
-  width: 100%;
-  height: 999px;
-  top: -999px;
-  background-color: tomato;
+  overflow: hidden !important;
 }
 
 body{
   background: #00002C;
   overflow-y: hidden !important;
+  overflow: hidden !important;
 }
 
 html,
@@ -151,6 +147,7 @@ body {
   /* color: hsl(0, 0%, 6%); */
   /* color: #000dff; */
   overflow-y: hidden !important;
+  overflow: hidden !important;
   /* overflow-x: hidden; */
   cursor: url("cur.png"), url("cur.cur"), default;
   cursor: url(cur.png), auto;
